[package]
authors = ["hatoo <hato2000@gmail.com>"]
categories = [
    "command-line-utilities",
    "network-programming",
    "web-programming::http-client",
    "development-tools::profiling",
]
description = "Ohayou(おはよう), HTTP load generator, inspired by rakyll/hey with tui animation."
edition = "2021"
keywords = ["cli", "load-testing", "performance", "http"]
license = "MIT"
name = "oha"
readme = "README.md"
repository = "https://github.com/hatoo/oha"
version = "1.4.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls"]
native-tls = ["dep:native-tls", "dep:tokio-native-tls"]
rustls = [
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-native-certs",
    "dep:rustls-pki-types",
]
vsock = ["dep:tokio-vsock"]

[dependencies]
anyhow = "1.0.80"
average = "0.15.0"
byte-unit = "5.1.2"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = "0.27"
float-ord = "0.3.1"
flume = "0.11"
futures = "0.3.30"
humantime = "2.0.0"
libc = "0.2.147"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.57"
tokio = { version = "1.14.0", features = ["full"] }
ratatui = { version = "0.26.1", default-features = false, features = [
    "crossterm",
] }

hyper = { version = "1.0", features = ["client", "http1", "http2"] }

# native-tls
native-tls = { version = "0.2.11", features = ["alpn"], optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }

rustls = { version = "0.23.4", features = ["ring"], optional = true }
rustls-native-certs = { version = "0.7.0", optional = true }
tokio-rustls = { version = "0.26.0", optional = true }
rustls-pki-types = { version = "1.3.0", optional = true }

base64 = "0.22.0"
rand = "0.8"
hickory-resolver = "0.24.0"
rand_regex = "0.17.0"
regex-syntax = "0.8.2"
url = "2.4.0"
pin-project-lite = "0.2.13"
http-body-util = "0.1.0"
hyper-util = { version = "0.1.1", features = ["tokio"] }
tokio-vsock = { version = "0.5.0", optional = true }

[target.'cfg(unix)'.dependencies]
rlimit = "0.10.0"
jemallocator = "0.5.0"

[target.x86_64-unknown-linux-musl.dependencies]
# Workaround for release CI
aws-lc-rs = { version = "1.0.0", features = ["bindgen"] }

[dev-dependencies]
assert_cmd = "2.0.2"
axum = { version = "0.7", features = ["http2"] }
bytes = "1.0"
lazy_static = "1.4.0"
predicates = "3.1.0"
regex = "1.9.6"

[target.'cfg(unix)'.dev-dependencies]
tempfile = "3.10.0"
actix-web = "4"

[profile.pgo]
inherits = "release"
# https://github.com/TechEmpower/FrameworkBenchmarks/blob/master/frameworks/Rust/faf/Cargo.toml + lto=true
opt-level = 3
panic = 'abort'
codegen-units = 1
lto = true
debug = false
incremental = false
overflow-checks = false
